--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <!-- header -->
+
     <div id="header">
         <div id="logo">
             <h3><span>website</span>name</h3>
@@ -23,10 +25,13 @@
         </nav>
     </div>
 
+    <!-- container -->
+
     <div id="container">
         <div id="content-container">
             <h1>web designer</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit.</p>
             <button>Read More</button>
         </div>
 
@@ -34,6 +39,16 @@
             <img src="/img/bg.svg" alt="#">
         </div>
     </div>
+
+    <!-- footer -->
+
+    <footer>
+        <p>emmestudio P.Iva 1234567890 - Credits by <a href="#">Margherita Grasso</a> </p>
+    </footer>
+
+
+
+
 
 </body>
 
